SUPER::method wip